Fixed uneven alignment of JA / NEJ words inside statement buttons across browsers

--- a/dev/scss/components/_statements.scss
+++ b/dev/scss/components/_statements.scss
@@ -52,6 +52,7 @@
         width: 100%;
         height: 100%;
         padding-top: 8px;
+        line-height: 1;
         color: $color-base-lighter-5;
         font-size: $fontSize-xxxsmall;
         font-family: $fontFamily-system;
